# function-selector-miner

./: .gitignore  Cargo.toml  LICENSE  README.md  function_selector_miner  main.cpp
benches/: avx_benchmark.rs
cpp/: README.md  bench.sh  build.sh  main.cpp
rust-enjoyer/: Cargo.toml
rust-enjoyer/.cargo/: config.toml
rust-enjoyer/benches/: avx_benchmark.rs
rust-enjoyer/src/: lib.rs  main.rs  sponge.rs  sponges_avx.rs
src/: error.rs  lib.rs  main.rs  small_string.rs  sponge.rs  sponges_avx.rs
