[package]
name = "function-selector-miner"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.16.0"
rayon = "1.8.0"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
opt-level = 3
lto = "fat"

[[bench]]
name = "avx_benchmark"
harness = false
